<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_title_hint">Enter a title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="crime_police_required_button">Call 911</string>
    <string name="crime_police_required">Police required</string>
    <string name="to_first_button">First</string>
    <string name="to_last_button">Last</string>
    <string name="date_picker_title">Crime date:</string>
    <string name="time_picker_title">Crime time：</string>
    <string name="new_crime">New crime</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete crime</string>
    <string name="no_crime_hint">No crime to display</string>
    <string name="crime_suspect">Choose suspect</string>
    <string name="crime_report_text">Send crime report</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %1$s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s and %4$s</string>
    <string name="crime_call_suspect">Call %1$s</string>
    <string name="suspect">suspect</string>
    <string name="crime_photo_description">A crime photo</string>
    <string name="crime_camera_description">Take a crime photo</string>
</resources>
